--- a/src/components/apartmentDetails.astro
+++ b/src/components/apartmentDetails.astro
@@ -3,17 +3,17 @@ import '@fortawesome/fontawesome-free/css/all.min.css';
 import { Image } from 'astro:assets';
 import home from '.././img/home.jpg';
 import Carosouel from './carosouel.astro';
+import Contactform from './contactform.astro';
 ---
-<div>
-  <div class="md:flex gap-6 mt-5">
-    <div class="lg:w-4/6" >
-      <div class="flex justify-between items-center w-full">
+  <div class="md:flex gap-6 mt-5 flex-auto">
+    <div class="lg:w-5/6 md:w-4/6 mt-10= flex-row">
+      <div class="flex justify-between items-center">
         <div class="flex-auto lg:grid lg:grid-cols-2">
           <div>
             <h1 class="text-xl">Cosy Apartment for rent</h1>
             <div class="flex justify-betwen">
-              <a> <img src="" /></a>
-              <span class="text-lg font-medium">New York, USA</span>
+              <a> <i class='fas fa-map-marker-alt'/></a>
+              <span class="font-medium hover:cursor-pointer ml-1">New York, USA</span>
             </div>
           </div>
           <div class="flex items-center gap-2 font-bold text-blue-gray-500 lg:ml-44">
@@ -86,7 +86,7 @@ import Carosouel from './carosouel.astro';
           </div>
         </div>
       </div>
-      <p>
+      <p class="mt-5">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem sit consequuntur odio eaque asperiores, ipsam
         tempora at repellat, autem nostrum amet ratione a accusamus ex maxime velit excepturi, debitis atque! Minima
         aperiam quas at, officiis similique ab non necessitatibus, ducimus aspernatur possimus beatae impedit. Dolorum
@@ -94,50 +94,9 @@ import Carosouel from './carosouel.astro';
       </p>
        <Carosouel/>
     </div>
-    <div>
-      <div class="md:w-full p-2">
-        <span>Brief Information</span><br />
-        <span><span class="font-bold">Owner</span>:Real Estate Agency</span>
-        <br />
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-4 p-4">
-          <div class="flex items-center justify-center gap-1">
-            <i class="fas fa-car text-xl text-black-500"></i>
-            <p>car</p>
-          </div>
-          <div class="flex items-center justify-center gap-1">
-            <i class="fas fa-car text-xl text-black-500"></i>
-            <p>car</p>
-          </div>
-          <div class="flex items-center justify-center gap-1">
-            <i class="fas fa-car text-xl text-black-500"></i>
-            <p>car</p>
-          </div>
-          <div class="flex items-center justify-center gap-1">
-            <i class="fas fa-car text-xl text-black-500"></i>
-            <p>car</p>
-          </div>
-        </div>
-        <div class="flex justify-between">
-          <div>
-            <p>1-day rent</p>
-            <p>
-              <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
-            </p>
-          </div>
-          <div>
-            <p>1-day rent</p>
-            <p>
-              <span class="text-2xl font-bold"><i class="fa-solid fa-euro-sign"></i> 80 </span>/<span>&nbsp; night</span>
-            </p>
-          </div>
-        </div>
-        <div>
-          <div class="lg:flex items-center gap-4 mt-3 lg:w-5/6">
-            <button class="px-16 bg-black text-white font-semibold rounded-md"> Contact me </button>
-          </div>
-        </div>
-      </div>
+    <div class="lg-w-1/6 md:w-2/6 p-5">
+      <Contactform/>
     </div>
   </div>
-</div>
+
 
