--- a/src/components/carosouel.astro
+++ b/src/components/carosouel.astro
@@ -5,7 +5,7 @@ import home2 from ".././img/home2.jpeg";
 import { Image } from "astro:assets";
 ---
 
-<div class="relative w-full max-w-4xl mx-auto">
+<div class="relative w-full max-w-4xl mx-auto mt-10">
     <div class="overflow-hidden">
         <div
             id="slider"
