--- a/src/components/moreHouse.astro
+++ b/src/components/moreHouse.astro
@@ -1,45 +1,45 @@
 ---
-import Picture from "astro/components/Picture.astro";
-import '../style/moreHouse.css'
+import Picture from 'astro/components/Picture.astro';
+import '../style/moreHouse.css';
 
-const houseDetails=[{
-    src:'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
-    city:''
-},
-{
-src:'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
-    city:'',
-},
-{
-src:'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
-    city:''
-},
-]
-
+const houseDetails = [
+	{
+		src: 'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
+		city: '',
+	},
+	{
+		src: 'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
+		city: '',
+	},
+	{
+		src: 'https://img.freepik.com/free-vector/social-media-post-template-real-estate-apartment-promotion_8830-534.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1724112000&semt=ais_hybrid',
+		city: '',
+	},
+];
 ---
 
-<div class="relative p-5 lg:mt-10">
-    <!-- Top-right small "View More" button -->
-   
-    <div class="lg:mr-6">
-      <span class="float-left">
-        More House Details
-       </span>
-      <a href="/more-articles" class="view-more">View More</a>
-    </div>
-  
-    <div class="flex flex-wrap gap-5 mt-10">
-        {houseDetails.map(data => (
-          <div class="w-full sm:w-[calc(50%-1.25rem)] lg:w-[calc(33.33%-1.25rem)] p-5 border border-gray-300 rounded-md bg-white shadow-sm">
-           <Picture
-                src={data.src}
-                alt={"house"}
-                sizes="(max-width: 800px) 100vw, 400px"
-                width={400}
-                height={400}
-                class="w-full rounded-md rounded transition group-hover:-translate-y-1 group-hover:shadow-xl bg-white object-cover object-center aspect-square"
-              />
-          </div>
-        ))}
-      </div>
-  </div>
+<div class="relative lg:p-5 lg:mt-10 mt-10">
+	<!-- Top-right small "View More" button -->
+
+	<div class="container">
+		<h1 class="text-2xl">More House Details</h1>
+		<a href="#" class="view-more">View More</a>
+	</div>
+
+	<div class="houseContainer">
+		{
+			houseDetails.map((data) => (
+				<div class="housePicture">
+					<Picture
+						src={data.src}
+						alt={'house'}
+						sizes="(max-width: 800px) 100vw, 400px"
+						width={400}
+						height={400}
+						class="picture"
+					/>
+				</div>
+			))
+		}
+	</div>
+</div>
