--- a/src/components/apartmentDetails.astro
+++ b/src/components/apartmentDetails.astro
@@ -4,13 +4,19 @@ import { Image } from 'astro:assets';
 import home from '.././img/home.jpg';
 import Carosouel from './carosouel.astro';
 import Contactform from './contactform.astro';
+import gustavia from '.././img/compass-light.svg';
+import bedroom from '.././img/bedroom.svg';
+import price from '.././img/price.svg';
+import shower from '.././img/shower.svg';
+import '../style/moreHouse.css';
+
 ---
-  <div class="md:flex gap-6 mt-5 flex-auto">
+  <div class="md:flex gap-6 my-5 flex-auto">
     <div class="lg:w-5/6 md:w-4/6 mt-10= flex-row">
       <div class="flex justify-between items-center">
         <div class="flex-auto lg:grid lg:grid-cols-2">
           <div>
-            <h1 class="text-2xl font-bold">Cosy Apartment for rent</h1>
+            <h1 class="text-2xl font-bold">The Green House</h1>
             <div class="flex justify-betwen">
               <a> <i class='fas fa-map-marker-alt'/></a>
               <span class="font-medium hover:cursor-pointer ml-1">New York, USA</span>
@@ -19,15 +25,40 @@ import Contactform from './contactform.astro';
         </div>
       </div>
       <p class="mt-5">
-        <b>Description </b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem sit consequuntur odio eaque asperiores, ipsam
-        tempora at repellat, autem nostrum amet ratione a accusamus ex maxime velit excepturi, debitis atque! Minima
-        aperiam quas at, officiis similique ab non necessitatibus, ducimus aspernatur possimus beatae impedit. Dolorum
-        ratione possimus, sapiente aut ipsum, nam deleniti ipsa impedit mollitia perspiciatis animi rerum odit quam.
+        <b>Description </b>Introducing Villa Green House, an exceptional investment opportunity located in the heart of Gustavia, St. Barths. This property, set on the ground floor, offers significant potential for both residential and rental purposes. Situated in the bustling center of Gustavia, this villa provides easy access to the island’s premier dining, shopping, and entertainment venues, making it a prime location for investment.
       </p>
        <Carosouel/>
     </div>
     <div class="lg-w-1/6 md:w-2/6 p-5">
-      <Contactform/>
+      <div>
+        <div class="md:w-full p-2">
+          <span>Amazing investment opportunity in Gustavia center!</span><br />
+          <span><span class="font-bold">Owner</span>:The Green House Agency</span>
+          <br />
+          <div class="grid grid-cols-2">
+            <div class="p-3">
+              <Image src={gustavia} alt="gustavia" class="rounded-3xl"/>
+              <p>Gustavia</p>
+            </div>
+            <div class="p-3">
+              <Image src={bedroom} alt="gustavia" class="rounded-3xl"/>
+              <p>3 Bedroom Villa For Sale</p>
+            </div>
+            <div class="p-3">
+              <Image src={shower} alt="gustavia" class="rounded-3xl"/>
+              <p>2 Bathroom Villa For Sale</p>
+            </div>
+            <div class="p-3">
+              <Image src={price} alt="gustavia" class="rounded-3xl"/>
+              <p>3.000.000 €*</p>
+            </div>
+          </div>
+          <div class="flex justify-center">
+            <div class="lg:flex lg:w-5/6">
+              <a href="#" class="view-more w-full text-center">Contact me</a>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
 
