--- a/src/components/carosouel.astro
+++ b/src/components/carosouel.astro
@@ -5,7 +5,11 @@ import home2 from ".././img/home2.jpeg";
 import { Image } from "astro:assets";
 ---
 
-<div class="relative w-full max-w-4xl mx-auto">
+<div class="relative w-full max-w-4xl mt-10 mx-auto">
+    <div>
+        <h1 class="text-2xl font-bold">Features</h1>
+        <p>Restaurant close by Villa For Sale, Shopping close by Villa For Sale</p>
+    </div>
     <div class="overflow-hidden">
         <div
             id="slider"
