--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -4,55 +4,106 @@ import Button from "./ui/button.astro";
 
 <!-- To make this contact form work, create your free access key from https://web3forms.com/
      Then you will get all form submissions in your email inbox. -->
-<form
-  id="form"
-  class="needs-validation"
-  novalidate>
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-  <!-- Create your free access key from https://web3forms.com/ -->
-  <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
-  <div class="mb-5">
-    <input
-      type="text"
-      placeholder="Full Name"
-      required
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
-      name="name"
-    />
-    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please provide your full name.
-    </div>
-  </div>
-  <div class="mb-5">
-    <label for="email_address" class="sr-only">Email Address</label><input
-      id="email_address"
-      type="email"
-      placeholder="Email Address"
-      name="email"
-      required
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
-    />
-    <div class="empty-feedback text-red-400 text-sm mt-1">
-      Please provide your email address.
-    </div>
-    <div class="invalid-feedback text-red-400 text-sm mt-1">
-      Please provide a valid email address.
-    </div>
-  </div>
-  <div class="mb-3">
-    <textarea
-      name="message"
-      required
-      placeholder="Your Message"
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
-    ></textarea>
-    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please enter your message.
-    </div>
-  </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
-  <div id="result" class="mt-3 text-center"></div>
-</form>
+<div
+  id="contactFormButton"
+  class="fixed right-0 z-10 hidden bottom-16 md:right-2 lg:right-14"
+>
+    <form
+      id="form"
+      class="needs-validation hidden min-w-96 contact-form bg-white p-5 rounded-md"
+      novalidate
+    >
+      <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+      <!-- Create your free access key from https://web3forms.com/ -->
+      <input
+        type="checkbox"
+        class="hidden"
+        style="display:none"
+        name="botcheck"
+      />
+      <div class="mb-5">
+        <input
+          type="text"
+          placeholder="Full Name"
+          required
+          class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+          name="name"
+        />
+        <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
+          Please provide your full name.
+        </div>
+      </div>
+      <div class="mb-5">
+        <label for="email_address" class="sr-only">Email Address</label><input
+          id="email_address"
+          type="email"
+          placeholder="Email Address"
+          name="email"
+          required
+          class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+        />
+        <div class="empty-feedback text-red-400 text-sm mt-1">
+          Please provide your email address.
+        </div>
+        <div class="invalid-feedback text-red-400 text-sm mt-1">
+          Please provide a valid email address.
+        </div>
+      </div>
+      <div class="mb-3">
+        <textarea
+          name="message"
+          required
+          placeholder="Your Message"
+          class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+        ></textarea>
+        <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
+          Please enter your message.
+        </div>
+      </div>
+      <Button type="submit" size="lg" block>Send Message</Button>
+      <div id="result" class="mt-3 text-center"></div>
+    </form>
+
+  <a
+    href="#form"
+    onclick="showForm()"
+    class="w-16 h-16 ml-80 px-3.5 text-md text-center self-stret flex items-center justify-centerch leading-none border rounded-[32px] text-white border-transparent bg-black group hover:border-black hover:text-black hover:bg-white lg:mt-0"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      width="32"
+      height="30"
+      viewBox="0 0 39 37"
+      class="conversations-visitor-open-icon"
+      ><defs
+        ><path
+          id="conversations-visitor-open-icon-path-1:r0:"
+          d="M31.4824242 24.6256121L31.4824242 0.501369697 0.476266667 0.501369697 0.476266667 24.6256121z"
+        ></path></defs
+      ><g
+        fill="none"
+        fill-rule="evenodd"
+        stroke="none"
+        stroke-width="1"
+        class="fill-white hover:fill-black"
+        ><g transform="translate(-1432 -977) translate(1415.723 959.455)"
+          ><g transform="translate(17 17)"
+            ><g transform="translate(6.333 .075)"
+              ><path
+                d="M30.594 4.773c-.314-1.943-1.486-3.113-3.374-3.38C27.174 1.382 22.576.5 15.36.5c-7.214 0-11.812.882-11.843.889-1.477.21-2.507.967-3.042 2.192a83.103 83.103 0 019.312-.503c6.994 0 11.647.804 12.33.93 3.079.462 5.22 2.598 5.738 5.728.224 1.02.932 4.606.932 8.887 0 2.292-.206 4.395-.428 6.002 1.22-.516 1.988-1.55 2.23-3.044.008-.037.893-3.814.893-8.415 0-4.6-.885-8.377-.89-8.394"
+              ></path></g
+            ><g transform="translate(0 5.832)"
+              ><path
+                d="M31.354 4.473c-.314-1.944-1.487-3.114-3.374-3.382-.046-.01-4.644-.89-11.859-.89-7.214 0-11.813.88-11.843.888-1.903.27-3.075 1.44-3.384 3.363C.884 4.489 0 8.266 0 12.867c0 4.6.884 8.377.889 8.393.314 1.944 1.486 3.114 3.374 3.382.037.007 3.02.578 7.933.801l2.928 5.072a1.151 1.151 0 001.994 0l2.929-5.071c4.913-.224 7.893-.794 7.918-.8 1.902-.27 3.075-1.44 3.384-3.363.01-.037.893-3.814.893-8.414 0-4.601-.884-8.378-.888-8.394"
+              ></path></g
+            ></g
+          ></g
+        ></g
+      ></svg
+    ></a
+  >
+</div>
 
 <style>
   .invalid-feedback,
@@ -122,4 +173,25 @@ import Button from "./ui/button.astro";
         }, 5000);
       });
   });
+
+  //Contact form Button
+  window.addEventListener("scroll", function () {
+    var button = document.getElementById("contactFormButton");
+    var scrollPosition =
+      window.pageYOffset || document.documentElement.scrollTop;
+
+    if (scrollPosition > 200) {
+      button.classList.remove("hidden");
+    } else {
+      button.classList.add("hidden");
+    }
+  });
+
+  function showForm() {
+    if (document.getElementById("form").classList.contains("hidden")) {
+      document.getElementById("form").classList.remove("hidden");
+    } else {
+      document.getElementById("form").classList.add("hidden");
+    }
+  }
 </script>
