--- a/src/pages/rent.astro
+++ b/src/pages/rent.astro
@@ -1,30 +1,38 @@
 ---
-import { getCollection } from 'astro:content';
-import Layout from '@layouts/Layout.astro';
-import Container from '@components/container.astro';
-import ApartmentDetails from '@components/apartmentDetails.astro';
-import { Image } from 'astro:assets';
-import home from '../img/home.jpg';
-import MoreHouse from '@components/moreHouse.astro';
-import Carosouel from '@components/carosouel.astro';
-import '.././style/rent.css'
+import { getCollection } from "astro:content";
+import Layout from "@layouts/Layout.astro";
+import Container from "@components/container.astro";
+import ApartmentDetails from "@components/apartmentDetails.astro";
+import { Image } from "astro:assets";
+import home from "../img/home.jpg";
+import MoreHouse from "@components/moreHouse.astro";
+import Carosouel from "@components/carosouel.astro";
+import Googlemap from "@components/googlemap.astro";
+import Contactform from "@components/contactform.astro";
+import ".././style/rent.css";
 
 // Filter team entries with 'draft: false' & date before current date
-const publishedTeamMembers = await getCollection('team', ({ data }) => {
+const publishedTeamMembers = await getCollection("team", ({ data }) => {
   return !data.draft && data.publishDate < new Date();
 });
 ---
 
 <Layout title="About">
   <Container>
+    <Contactform />
+  </Container>
+  <Container>
     <div class="homeImgContainer">
-      <Image src={home} alt="not found" class='homeImg md:h-[500px]' />
+      <Image src={home} alt="not found" class="homeImg md:h-[500px]" />
     </div>
   </Container>
   <Container>
     <ApartmentDetails />
   </Container>
   <Container>
-    <MoreHouse/>
+    <MoreHouse />
+  </Container>
+  <Container>
+    <Googlemap />
   </Container>
 </Layout>
