--- a/src/style/rent.css
+++ b/src/style/rent.css
@@ -10,3 +10,12 @@
 .homeImg{
     @apply w-full rounded-lg shadow-xl hover:shadow-2xl shadow-gray-400
 }
+
+.my-button {
+    cursor: pointer;
+    @apply bg-black text-white font-bold rounded p-1 px-2 lg:mr-5 border-solid border-2 border-white
+}
+
+.my-button {
+    @apply text-black bg-white border-black 
+}
